--- a/pubx/public/index.html
+++ b/pubx/public/index.html
@@ -10,26 +10,14 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <script async src="//www.googletagservices.com/tag/js/gpt.js"></script>
     <script async src="//acdn.adnxs.com/prebid/not-for-prod/prebid.js"></script>
     <script async src="%PUBLIC_URL%/prebid4.24.0.js"></script>
 
-
+<!--    example from prebid.js. Check to see if ad data is being pulled-->
     <script>
       var sizes = [
         [728, 90]
@@ -102,7 +90,7 @@
 
     </script>
 
-    <title>React App</title>
+    <title>Bid Data Harvest</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -119,17 +107,8 @@
         </script>
       </div>
     </div>
-
+<!--Where our content will be rendered-->
     <div id="root" data-details="false"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
