--- a/pubx/public/index.html
+++ b/pubx/public/index.html
@@ -90,7 +90,7 @@
 
     </script>
 
-    <title>Bid Data Harvest</title>
+    <title>Bid Data</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
